// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pipeline (ViteWebsite) Construct Creation creates a Vite pipeline without webhook 1`] = `
{
  "Parameters": "<Parameters elided>",
  "Resources": {
    "Cdn9963B1AD": {
      "Properties": {
        "DistributionConfig": {
          "DefaultCacheBehavior": {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "TargetOriginId": "TestStackCdnOrigin192052E26",
            "ViewerProtocolPolicy": "allow-all",
          },
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "SiteBucket397A1860",
                  "RegionalDomainName",
                ],
              },
              "Id": "TestStackCdnOrigin192052E26",
              "S3OriginConfig": {
                "OriginAccessIdentity": {
                  "Fn::Join": [
                    "",
                    [
                      "origin-access-identity/cloudfront/",
                      {
                        "Ref": "CdnOrigin1S3Origin9BD26264",
                      },
                    ],
                  ],
                },
              },
            },
          ],
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "CdnOrigin1S3Origin9BD26264": {
      "Properties": {
        "CloudFrontOriginAccessIdentityConfig": {
          "Comment": "Identity for TestStackCdnOrigin192052E26",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
    "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "KMSMasterKeyID": {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
                    "Arn",
                  ],
                },
                "SSEAlgorithm": "aws:kms",
              },
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Delete",
    },
    "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKeyAliasAE3762D9": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "AliasName": "alias/codepipeline-teststackpvitedeploymenttestpipelinepipelinedab2526f",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
      "UpdateReplacePolicy": "Delete",
    },
    "PViteDeploymentTestPipelinePipelineArtifactsBucketPolicy2DC26FD2": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "Bucket": {
          "Ref": "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "PViteDeploymentTestPipelinePipelineBuildViteBuildCodePipelineActionRoleDefaultPolicyC9A86AFF": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "codebuild:BatchGetBuilds",
                "codebuild:StartBuild",
                "codebuild:StopBuild",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentViteBuildProject912ED82E",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PViteDeploymentTestPipelinePipelineBuildViteBuildCodePipelineActionRoleDefaultPolicyC9A86AFF",
        "Roles": [
          {
            "Ref": "PViteDeploymentTestPipelinePipelineBuildViteBuildCodePipelineActionRoleE07A4A7C",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PViteDeploymentTestPipelinePipelineBuildViteBuildCodePipelineActionRoleE07A4A7C": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineRoleA8237A21",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PViteDeploymentTestPipelinePipelineC2EA5176": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "PViteDeploymentTestPipelinePipelineRoleDefaultPolicy60AC1984",
        "PViteDeploymentTestPipelinePipelineRoleA8237A21",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "ArtifactStore": {
          "EncryptionKey": {
            "Id": {
              "Fn::GetAtt": [
                "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
                "Arn",
              ],
            },
            "Type": "KMS",
          },
          "Location": {
            "Ref": "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
          },
          "Type": "S3",
        },
        "Name": "TestPipeline",
        "RestartExecutionOnUpdate": true,
        "RoleArn": {
          "Fn::GetAtt": [
            "PViteDeploymentTestPipelinePipelineRoleA8237A21",
            "Arn",
          ],
        },
        "Stages": [
          {
            "Actions": [
              {
                "ActionTypeId": {
                  "Category": "Source",
                  "Owner": "ThirdParty",
                  "Provider": "GitHub",
                  "Version": "1",
                },
                "Configuration": {
                  "Branch": "main",
                  "OAuthToken": "{{resolve:secretsmanager:github-token:SecretString:::}}",
                  "Owner": "test-owner",
                  "PollForSourceChanges": false,
                  "Repo": "test-repo",
                },
                "Name": "GitHub_Source",
                "OutputArtifacts": [
                  {
                    "Name": "SourceOutput",
                  },
                ],
                "RunOrder": 1,
              },
            ],
            "Name": "Source",
          },
          {
            "Actions": [
              {
                "ActionTypeId": {
                  "Category": "Build",
                  "Owner": "AWS",
                  "Provider": "CodeBuild",
                  "Version": "1",
                },
                "Configuration": {
                  "ProjectName": {
                    "Ref": "PViteDeploymentViteBuildProject912ED82E",
                  },
                },
                "InputArtifacts": [
                  {
                    "Name": "SourceOutput",
                  },
                ],
                "Name": "Vite_Build",
                "OutputArtifacts": [
                  {
                    "Name": "BuildOutput",
                  },
                ],
                "RoleArn": {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineBuildViteBuildCodePipelineActionRoleE07A4A7C",
                    "Arn",
                  ],
                },
                "RunOrder": 1,
              },
            ],
            "Name": "Build",
          },
          {
            "Actions": [
              {
                "ActionTypeId": {
                  "Category": "Deploy",
                  "Owner": "AWS",
                  "Provider": "S3",
                  "Version": "1",
                },
                "Configuration": {
                  "BucketName": {
                    "Ref": "SiteBucket397A1860",
                  },
                  "Extract": "true",
                },
                "InputArtifacts": [
                  {
                    "Name": "BuildOutput",
                  },
                ],
                "Name": "S3_Deploy",
                "RoleArn": {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineDeployS3DeployCodePipelineActionRole6457669B",
                    "Arn",
                  ],
                },
                "RunOrder": 1,
              },
            ],
            "Name": "Deploy",
          },
        ],
      },
      "Type": "AWS::CodePipeline::Pipeline",
    },
    "PViteDeploymentTestPipelinePipelineDeployS3DeployCodePipelineActionRole6457669B": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineRoleA8237A21",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PViteDeploymentTestPipelinePipelineDeployS3DeployCodePipelineActionRoleDefaultPolicy9D153682": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "SiteBucket397A1860",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "SiteBucket397A1860",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:DescribeKey",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PViteDeploymentTestPipelinePipelineDeployS3DeployCodePipelineActionRoleDefaultPolicy9D153682",
        "Roles": [
          {
            "Ref": "PViteDeploymentTestPipelinePipelineDeployS3DeployCodePipelineActionRole6457669B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PViteDeploymentTestPipelinePipelineRoleA8237A21": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "codepipeline.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PViteDeploymentTestPipelinePipelineRoleDefaultPolicy60AC1984": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:DescribeKey",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
                  "Arn",
                ],
              },
            },
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentTestPipelinePipelineBuildViteBuildCodePipelineActionRoleE07A4A7C",
                  "Arn",
                ],
              },
            },
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentTestPipelinePipelineDeployS3DeployCodePipelineActionRole6457669B",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PViteDeploymentTestPipelinePipelineRoleDefaultPolicy60AC1984",
        "Roles": [
          {
            "Ref": "PViteDeploymentTestPipelinePipelineRoleA8237A21",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PViteDeploymentTestPipelinePipelineSourceGitHubSourceWebhookResource488A63CB": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "Authentication": "GITHUB_HMAC",
        "AuthenticationConfiguration": {
          "SecretToken": "{{resolve:secretsmanager:github-token:SecretString:::}}",
        },
        "Filters": [
          {
            "JsonPath": "$.ref",
            "MatchEquals": "refs/heads/{Branch}",
          },
        ],
        "RegisterWithThirdParty": true,
        "TargetAction": "GitHub_Source",
        "TargetPipeline": {
          "Ref": "PViteDeploymentTestPipelinePipelineC2EA5176",
        },
        "TargetPipelineVersion": 1,
      },
      "Type": "AWS::CodePipeline::Webhook",
    },
    "PViteDeploymentViteBuildProject912ED82E": {
      "Properties": {
        "Artifacts": {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": {
          "Type": "NO_CACHE",
        },
        "EncryptionKey": {
          "Fn::GetAtt": [
            "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
            "Arn",
          ],
        },
        "Environment": {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "EnvironmentVariables": [
            {
              "Name": "VITE_MODE",
              "Type": "PLAINTEXT",
              "Value": "test",
            },
          ],
          "Image": "aws/codebuild/amazonlinux2-x86_64-standard:5.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": {
          "Fn::GetAtt": [
            "PViteDeploymentViteBuildProjectRole4A6720BB",
            "Arn",
          ],
        },
        "Source": {
          "BuildSpec": "{
  "version": "0.2",
  "phases": {
    "install": {
      "runtime-versions": {
        "nodejs": "20"
      },
      "commands": [
        "npm ci"
      ]
    },
    "build": {
      "commands": [
        "echo \\"Building Vite app...\\"",
        "npm ci",
        "npm run build"
      ]
    }
  },
  "artifacts": {
    "base-directory": "dist",
    "files": [
      "**/*"
    ]
  },
  "cache": {
    "paths": [
      "node_modules/**/*"
    ]
  }
}",
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PViteDeploymentViteBuildProjectRole4A6720BB": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PViteDeploymentViteBuildProjectRoleDefaultPolicy327F99C0": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      {
                        "Ref": "PViteDeploymentViteBuildProject912ED82E",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      {
                        "Ref": "PViteDeploymentViteBuildProject912ED82E",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    {
                      "Ref": "PViteDeploymentViteBuildProject912ED82E",
                    },
                    "-*",
                  ],
                ],
              },
            },
            {
              "Action": "cloudfront:CreateInvalidation",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":cloudfront::",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":distribution/",
                    {
                      "Ref": "Cdn9963B1AD",
                    },
                  ],
                ],
              },
            },
            {
              "Action": [
                "s3:PutObject",
                "s3:PutObjectAcl",
                "s3:ListBucket",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "SiteBucket397A1860",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "SiteBucket397A1860",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:DescribeKey",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PViteDeploymentViteBuildProjectRoleDefaultPolicy327F99C0",
        "Roles": [
          {
            "Ref": "PViteDeploymentViteBuildProjectRole4A6720BB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SiteBucket397A1860": {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "SiteBucketPolicy3AC1D0F8": {
      "Properties": {
        "Bucket": {
          "Ref": "SiteBucket397A1860",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": {
                "CanonicalUser": {
                  "Fn::GetAtt": [
                    "CdnOrigin1S3Origin9BD26264",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "SiteBucket397A1860",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Pipeline (ViteWebsite) Construct Integration synthesizes a valid template with webhook wiring 1`] = `
{
  "Parameters": "<Parameters elided>",
  "Resources": {
    "Cdn9963B1AD": {
      "Properties": {
        "DistributionConfig": {
          "DefaultCacheBehavior": {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "TargetOriginId": "TestStackCdnOrigin192052E26",
            "ViewerProtocolPolicy": "allow-all",
          },
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "SiteBucket397A1860",
                  "RegionalDomainName",
                ],
              },
              "Id": "TestStackCdnOrigin192052E26",
              "S3OriginConfig": {
                "OriginAccessIdentity": {
                  "Fn::Join": [
                    "",
                    [
                      "origin-access-identity/cloudfront/",
                      {
                        "Ref": "CdnOrigin1S3Origin9BD26264",
                      },
                    ],
                  ],
                },
              },
            },
          ],
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "CdnOrigin1S3Origin9BD26264": {
      "Properties": {
        "CloudFrontOriginAccessIdentityConfig": {
          "Comment": "Identity for TestStackCdnOrigin192052E26",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
    "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "KMSMasterKeyID": {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
                    "Arn",
                  ],
                },
                "SSEAlgorithm": "aws:kms",
              },
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Delete",
    },
    "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKeyAliasAE3762D9": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "AliasName": "alias/codepipeline-teststackpvitedeploymenttestpipelinepipelinedab2526f",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
      "UpdateReplacePolicy": "Delete",
    },
    "PViteDeploymentTestPipelinePipelineArtifactsBucketPolicy2DC26FD2": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "Bucket": {
          "Ref": "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false",
                },
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*",
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "PViteDeploymentTestPipelinePipelineBuildViteBuildCodePipelineActionRoleDefaultPolicyC9A86AFF": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "codebuild:BatchGetBuilds",
                "codebuild:StartBuild",
                "codebuild:StopBuild",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentViteBuildProject912ED82E",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PViteDeploymentTestPipelinePipelineBuildViteBuildCodePipelineActionRoleDefaultPolicyC9A86AFF",
        "Roles": [
          {
            "Ref": "PViteDeploymentTestPipelinePipelineBuildViteBuildCodePipelineActionRoleE07A4A7C",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PViteDeploymentTestPipelinePipelineBuildViteBuildCodePipelineActionRoleE07A4A7C": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineRoleA8237A21",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PViteDeploymentTestPipelinePipelineC2EA5176": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "PViteDeploymentTestPipelinePipelineRoleDefaultPolicy60AC1984",
        "PViteDeploymentTestPipelinePipelineRoleA8237A21",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "ArtifactStore": {
          "EncryptionKey": {
            "Id": {
              "Fn::GetAtt": [
                "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
                "Arn",
              ],
            },
            "Type": "KMS",
          },
          "Location": {
            "Ref": "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
          },
          "Type": "S3",
        },
        "Name": "TestPipeline",
        "RestartExecutionOnUpdate": true,
        "RoleArn": {
          "Fn::GetAtt": [
            "PViteDeploymentTestPipelinePipelineRoleA8237A21",
            "Arn",
          ],
        },
        "Stages": [
          {
            "Actions": [
              {
                "ActionTypeId": {
                  "Category": "Source",
                  "Owner": "ThirdParty",
                  "Provider": "GitHub",
                  "Version": "1",
                },
                "Configuration": {
                  "Branch": "main",
                  "OAuthToken": "{{resolve:secretsmanager:github-token:SecretString:::}}",
                  "Owner": "test-owner",
                  "PollForSourceChanges": false,
                  "Repo": "test-repo",
                },
                "Name": "GitHub_Source",
                "OutputArtifacts": [
                  {
                    "Name": "SourceOutput",
                  },
                ],
                "RunOrder": 1,
              },
            ],
            "Name": "Source",
          },
          {
            "Actions": [
              {
                "ActionTypeId": {
                  "Category": "Build",
                  "Owner": "AWS",
                  "Provider": "CodeBuild",
                  "Version": "1",
                },
                "Configuration": {
                  "ProjectName": {
                    "Ref": "PViteDeploymentViteBuildProject912ED82E",
                  },
                },
                "InputArtifacts": [
                  {
                    "Name": "SourceOutput",
                  },
                ],
                "Name": "Vite_Build",
                "OutputArtifacts": [
                  {
                    "Name": "BuildOutput",
                  },
                ],
                "RoleArn": {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineBuildViteBuildCodePipelineActionRoleE07A4A7C",
                    "Arn",
                  ],
                },
                "RunOrder": 1,
              },
            ],
            "Name": "Build",
          },
          {
            "Actions": [
              {
                "ActionTypeId": {
                  "Category": "Deploy",
                  "Owner": "AWS",
                  "Provider": "S3",
                  "Version": "1",
                },
                "Configuration": {
                  "BucketName": {
                    "Ref": "SiteBucket397A1860",
                  },
                  "Extract": "true",
                },
                "InputArtifacts": [
                  {
                    "Name": "BuildOutput",
                  },
                ],
                "Name": "S3_Deploy",
                "RoleArn": {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineDeployS3DeployCodePipelineActionRole6457669B",
                    "Arn",
                  ],
                },
                "RunOrder": 1,
              },
            ],
            "Name": "Deploy",
          },
        ],
      },
      "Type": "AWS::CodePipeline::Pipeline",
    },
    "PViteDeploymentTestPipelinePipelineDeployS3DeployCodePipelineActionRole6457669B": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineRoleA8237A21",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PViteDeploymentTestPipelinePipelineDeployS3DeployCodePipelineActionRoleDefaultPolicy9D153682": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "SiteBucket397A1860",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "SiteBucket397A1860",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:DescribeKey",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PViteDeploymentTestPipelinePipelineDeployS3DeployCodePipelineActionRoleDefaultPolicy9D153682",
        "Roles": [
          {
            "Ref": "PViteDeploymentTestPipelinePipelineDeployS3DeployCodePipelineActionRole6457669B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PViteDeploymentTestPipelinePipelinePipelineStateChange10B0C628": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "Description": "Lambda function to handle pipeline state changes",
        "EventPattern": {
          "detail-type": [
            "CodePipeline Pipeline Execution State Change",
          ],
          "resources": [
            {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":codepipeline:",
                  {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":",
                  {
                    "Ref": "PViteDeploymentTestPipelinePipelineC2EA5176",
                  },
                ],
              ],
            },
          ],
          "source": [
            "aws.codepipeline",
          ],
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "PWebhookHandlerB6C7E847",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PViteDeploymentTestPipelinePipelinePipelineStateChangeAllowEventRuleTestStackPWebhookHandler8BF6E7CC431512DC": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "PWebhookHandlerB6C7E847",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "PViteDeploymentTestPipelinePipelinePipelineStateChange10B0C628",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PViteDeploymentTestPipelinePipelineRoleA8237A21": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "codepipeline.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PViteDeploymentTestPipelinePipelineRoleDefaultPolicy60AC1984": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:DescribeKey",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
                  "Arn",
                ],
              },
            },
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentTestPipelinePipelineBuildViteBuildCodePipelineActionRoleE07A4A7C",
                  "Arn",
                ],
              },
            },
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentTestPipelinePipelineDeployS3DeployCodePipelineActionRole6457669B",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PViteDeploymentTestPipelinePipelineRoleDefaultPolicy60AC1984",
        "Roles": [
          {
            "Ref": "PViteDeploymentTestPipelinePipelineRoleA8237A21",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PViteDeploymentTestPipelinePipelineSourceGitHubSourceWebhookResource488A63CB": {
      "DependsOn": [
        "CdnOrigin1S3Origin9BD26264",
        "Cdn9963B1AD",
        "SiteBucketPolicy3AC1D0F8",
        "SiteBucket397A1860",
      ],
      "Properties": {
        "Authentication": "GITHUB_HMAC",
        "AuthenticationConfiguration": {
          "SecretToken": "{{resolve:secretsmanager:github-token:SecretString:::}}",
        },
        "Filters": [
          {
            "JsonPath": "$.ref",
            "MatchEquals": "refs/heads/{Branch}",
          },
        ],
        "RegisterWithThirdParty": true,
        "TargetAction": "GitHub_Source",
        "TargetPipeline": {
          "Ref": "PViteDeploymentTestPipelinePipelineC2EA5176",
        },
        "TargetPipelineVersion": 1,
      },
      "Type": "AWS::CodePipeline::Webhook",
    },
    "PViteDeploymentViteBuildProject912ED82E": {
      "Properties": {
        "Artifacts": {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": {
          "Type": "NO_CACHE",
        },
        "EncryptionKey": {
          "Fn::GetAtt": [
            "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
            "Arn",
          ],
        },
        "Environment": {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "EnvironmentVariables": [
            {
              "Name": "VITE_MODE",
              "Type": "PLAINTEXT",
              "Value": "test",
            },
          ],
          "Image": "aws/codebuild/amazonlinux2-x86_64-standard:5.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": {
          "Fn::GetAtt": [
            "PViteDeploymentViteBuildProjectRole4A6720BB",
            "Arn",
          ],
        },
        "Source": {
          "BuildSpec": "{
  "version": "0.2",
  "phases": {
    "install": {
      "runtime-versions": {
        "nodejs": "20"
      },
      "commands": [
        "npm ci"
      ]
    },
    "build": {
      "commands": [
        "echo \\"Building Vite app...\\"",
        "npm ci",
        "npm run build"
      ]
    }
  },
  "artifacts": {
    "base-directory": "dist",
    "files": [
      "**/*"
    ]
  },
  "cache": {
    "paths": [
      "node_modules/**/*"
    ]
  }
}",
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PViteDeploymentViteBuildProjectRole4A6720BB": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PViteDeploymentViteBuildProjectRoleDefaultPolicy327F99C0": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      {
                        "Ref": "PViteDeploymentViteBuildProject912ED82E",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      {
                        "Ref": "PViteDeploymentViteBuildProject912ED82E",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    {
                      "Ref": "PViteDeploymentViteBuildProject912ED82E",
                    },
                    "-*",
                  ],
                ],
              },
            },
            {
              "Action": "cloudfront:CreateInvalidation",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":cloudfront::",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":distribution/",
                    {
                      "Ref": "Cdn9963B1AD",
                    },
                  ],
                ],
              },
            },
            {
              "Action": [
                "s3:PutObject",
                "s3:PutObjectAcl",
                "s3:ListBucket",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "SiteBucket397A1860",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "SiteBucket397A1860",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "PViteDeploymentTestPipelinePipelineArtifactsBucketB000E753",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:DescribeKey",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "PViteDeploymentTestPipelinePipelineArtifactsBucketEncryptionKey9C41075A",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PViteDeploymentViteBuildProjectRoleDefaultPolicy327F99C0",
        "Roles": [
          {
            "Ref": "PViteDeploymentViteBuildProjectRole4A6720BB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PWebhookHandlerB6C7E847": {
      "DependsOn": [
        "PWebhookHandlerServiceRoleCBBE018C",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "<S3Key:elided>",
        },
        "Description": "Lambda function to send notifications on pipeline state changes",
        "Environment": {
          "Variables": {
            "PIPELINE_NAME": {
              "Ref": "PViteDeploymentTestPipelinePipelineC2EA5176",
            },
            "WEBHOOK_URL": "https://example.com/webhook",
          },
        },
        "Handler": "src.main.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "PWebhookHandlerServiceRoleCBBE018C",
            "Arn",
          ],
        },
        "Runtime": "python3.10",
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
    "PWebhookHandlerServiceRoleCBBE018C": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SiteBucket397A1860": {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "SiteBucketPolicy3AC1D0F8": {
      "Properties": {
        "Bucket": {
          "Ref": "SiteBucket397A1860",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": {
                "CanonicalUser": {
                  "Fn::GetAtt": [
                    "CdnOrigin1S3Origin9BD26264",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "SiteBucket397A1860",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
